Employee CRUD implemented

--- a/Organization/Organization.Client/Views/WorkshopWindow.axaml
+++ b/Organization/Organization.Client/Views/WorkshopWindow.axaml
@@ -4,7 +4,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Organization.Client.Views.WorkshopWindow"
-        Title="WorkshopWindow">
+        Title="WorkshopWindow"
+		SizeToContent="Height"
+		MaxWidth="500">
 	<Window.Styles>
 		<StyleInclude Source="/OrganizationClientStyles.axaml"/>
 	</Window.Styles>
