--- a/Organization/Organization.Client/OrganizationClientStyles.axaml
+++ b/Organization/Organization.Client/OrganizationClientStyles.axaml
@@ -13,6 +13,22 @@
 		<Setter Property="Margin" Value="0, 4, 0, 4"/>
 	</Style>
 
+	<Style Selector="Label">
+		<Setter Property="Margin" Value="0,0,15,0"/>
+	</Style>
+
+	<Style Selector="TextBox">
+		<Setter Property="Margin" Value="0,10,0,0"/>
+	</Style>
+
+	<Style Selector="NumericUpDown">
+		<Setter Property="Margin" Value="0,8,0,0"/>
+	</Style>
+
+	<Style Selector="StackPanel.StackPanelButtons">
+		<Setter Property="Margin" Value="0,10,0,0"/>
+	</Style>
+
 	<Style Selector="Button">
 		<Setter Property="Width" Value="100"></Setter>
 	</Style>
