--- a/Organization/Organization.Client/Views/EmployeeWindow.axaml
+++ b/Organization/Organization.Client/Views/EmployeeWindow.axaml
@@ -2,12 +2,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="600" d:DesignHeight="700"
         x:Class="Organization.Client.Views.EmployeeWindow"
 		xmlns:vm="using:Organization.Client.ViewModels"
         Title="EmployeeWindow"
 		SizeToContent="Height"
-		MaxWidth="500">
+		MaxWidth="600">
 	<Design.DataContext>
 		<vm:EmployeeViewModel/>
 	</Design.DataContext>
@@ -16,11 +16,44 @@
 		<StyleInclude Source="/OrganizationClientStyles.axaml"/>
 	</Window.Styles>
 
-	<Grid Classes="MainGrid" RowDefinitions="Auto,*" ColumnDefinitions="Auto, *">
-		<Label VerticalAlignment="Center">Имя</Label>
-		<TextBox Grid.Row="0" Grid.Column="1" Text="{Binding FirstName}"></TextBox>
+	<Grid Classes="MainGrid" RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, *" ColumnDefinitions="Auto, *">
+		<Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Рег. номер </Label>
+		<NumericUpDown Grid.Row="0" Grid.Column="1" Value="{Binding RegNumber}" Minimum="1"/>
 
-		<StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+		<Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Имя</Label>
+		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding FirstName}"></TextBox>
+		
+		<Label Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">Фамилия</Label>
+		<TextBox Grid.Row="2" Grid.Column="1" Text="{Binding LastName}"></TextBox>
+
+		<Label Grid.Row="3" Grid.Column="0" VerticalAlignment="Center">Отчество</Label>
+		<TextBox Grid.Row="3" Grid.Column="1" Text="{Binding PatronymicName}"></TextBox>
+
+		<Label Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">Дата рождения</Label>
+		<DatePicker Grid.Row="4" Grid.Column="1" SelectedDate="{Binding BirthDate}" />
+
+		<Label Grid.Row="5" Grid.Column="0" VerticalAlignment="Center">Id цеха</Label>
+		<NumericUpDown Grid.Row="5" Grid.Column="1" Value="{Binding WorkshopId}" Minimum="1"/>
+
+		<Label Grid.Row="6" Grid.Column="0" VerticalAlignment="Center">Домашний адрес</Label>
+		<TextBox Grid.Row="6" Grid.Column="1" Text="{Binding HomeAddress}"></TextBox>
+
+		<Label Grid.Row="7" Grid.Column="0" VerticalAlignment="Center">Домашний телефон</Label>
+		<TextBox Grid.Row="7" Grid.Column="1" Text="{Binding HomeTelephone}"></TextBox>
+		
+		<Label Grid.Row="8" Grid.Column="0" VerticalAlignment="Center">Рабочий телефон</Label>
+		<TextBox Grid.Row="8" Grid.Column="1" Text="{Binding WorkTelephone}"></TextBox>
+
+		<Label Grid.Row="9" Grid.Column="0" VerticalAlignment="Center">Семейное положение</Label>
+		<TextBox Grid.Row="9" Grid.Column="1" Text="{Binding FamilyStatus}"></TextBox>
+
+		<Label Grid.Row="10" Grid.Column="0" VerticalAlignment="Center">Количество человек в семье</Label>
+		<NumericUpDown Grid.Row="10" Grid.Column="1" Value="{Binding FamilyMembersCount}" Minimum="1"/>
+
+		<Label Grid.Row="11" Grid.Column="0" VerticalAlignment="Center">Количество детей</Label>
+		<NumericUpDown Grid.Row="11" Grid.Column="1" Value="{Binding ChildrenCount}" Minimum="0"/>
+
+		<StackPanel Classes="StackPanelButtons" Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="2"
 					HorizontalAlignment="Right"
 					Orientation="Horizontal">
 			<Button IsDefault="True" Command="{Binding OnSubmitCommand}">ОК</Button>
