--- a/UniversityData/UniversityData.Client/Views/MainWindow.axaml
+++ b/UniversityData/UniversityData.Client/Views/MainWindow.axaml
@@ -14,6 +14,29 @@
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+	<Window.Styles>
+		<StyleInclude Source="/UniversityDataStyles.axaml" />
+	</Window.Styles>
+	<Grid>
+		<TabControl>
+			<TabItem Header="Собственности зданий" HorizontalAlignment="Center">
+				<Grid Classes="MainGrid" RowDefinitions="Auto,*">
+					<StackPanel Grid.Row= "0" Orientation= "Horizontal">
+						<Button Classes ="ToolButton" Command="{Binding OnAddCommand}">Добавить</Button>
+						<Button Classes ="ToolButton">Изменить</Button>
+						<Button Classes ="ToolButton">Удалить</Button>
+					</StackPanel>
+				
+					<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+							  Items="{Binding ConstructionProperties}">
+						<DataGrid.Columns>
+							<DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
+							<DataGridTextColumn Header="Наименование собственности" Binding="{Binding NameConstructionProperty}"/>
+						</DataGrid.Columns>
+					</DataGrid>
+				</Grid>
+			</TabItem>
+		</TabControl>
+	</Grid>
 
 </Window>
