--- a/Organization/Organization.Client/Views/MainWindow.axaml
+++ b/Organization/Organization.Client/Views/MainWindow.axaml
@@ -121,6 +121,36 @@
 				</DataGrid>
 			</Grid>
 		</TabItem>
+
+		<TabItem>
+			<TabItem.Header>
+				<TextBlock VerticalAlignment="Center">DepartmentEmployees</TextBlock>
+			</TabItem.Header>
+			<Grid Classes="MainGrid" RowDefinitions="Auto,*">
+
+				<StackPanel Grid.Row="0" Orientation="Horizontal">
+					<Button Classes="ToolButton" Command="{Binding OnAddDepartmentEmployeeCommand}">
+						Добавить
+					</Button>
+					<Button Classes="ToolButton" Command="{Binding OnDeleteDepartmentEmployeeCommand}">
+						Удалить
+					</Button>
+					<Button Classes="ToolButton" Command="{Binding OnChangeDepartmentEmployeeCommand}">
+						Изменить
+					</Button>
+				</StackPanel>
+				<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+						  Items="{Binding DepartmentEmployees}"
+						  SelectedItem="{Binding SelectedDepartmentEmployee}">
+					<DataGrid.Columns>
+						<DataGridTextColumn Header="DepartmentId"
+											Binding="{Binding DepartmentId}"/>
+						<DataGridTextColumn Header="EmployeeId"
+											Binding="{Binding EmployeeId}"/>
+					</DataGrid.Columns>
+				</DataGrid>
+			</Grid>
+		</TabItem>
 	</TabControl>
 
 </Window>
