--- a/Organization/Organization.Client/Views/MainWindow.axaml
+++ b/Organization/Organization.Client/Views/MainWindow.axaml
@@ -151,6 +151,36 @@
 				</DataGrid>
 			</Grid>
 		</TabItem>
+
+		<TabItem>
+			<TabItem.Header>
+				<TextBlock VerticalAlignment="Center">EmployeeVacationVouchers</TextBlock>
+			</TabItem.Header>
+			<Grid Classes="MainGrid" RowDefinitions="Auto,*">
+
+				<StackPanel Grid.Row="0" Orientation="Horizontal">
+					<Button Classes="ToolButton" Command="{Binding OnAddEmployeeVacationVoucherCommand}">
+						Добавить
+					</Button>
+					<Button Classes="ToolButton" Command="{Binding OnDeleteEmployeeVacationVoucherCommand}">
+						Удалить
+					</Button>
+					<Button Classes="ToolButton" Command="{Binding OnChangeEmployeeVacationVoucherCommand}">
+						Изменить
+					</Button>
+				</StackPanel>
+				<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+						  Items="{Binding EmployeeVacationVouchers}"
+						  SelectedItem="{Binding SelectedEmployeeVacationVoucher}">
+					<DataGrid.Columns>
+						<DataGridTextColumn Header="Employee Id"
+											Binding="{Binding EmployeeId}"/>
+						<DataGridTextColumn Header="Vacation Voucher Id"
+											Binding="{Binding VacationVoucherId}"/>
+					</DataGrid.Columns>
+				</DataGrid>
+			</Grid>
+		</TabItem>
 	</TabControl>
 
 </Window>
