--- a/Organization/Organization.Client/Views/EmployeeVacationVoucherWindow.axaml
+++ b/Organization/Organization.Client/Views/EmployeeVacationVoucherWindow.axaml
@@ -2,22 +2,18 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:vm="using:Organization.Client.ViewModels"
 		mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Organization.Client.Views.EmployeeVacationVoucherWindow"
         
 		Title="EmployeeVacationVoucherWindow"
 		SizeToContent="Height"
 		MaxWidth="600">
-	<Design.DataContext>
-		<vm:EmployeeVacationVoucherViewModel/>
-	</Design.DataContext>
 
 	<Window.Styles>
 		<StyleInclude Source="/OrganizationClientStyles.axaml"/>
 	</Window.Styles>
 
-	<Grid Classes="MainGrid" RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, *" ColumnDefinitions="Auto, *">
+	<Grid Classes="MainGrid" RowDefinitions="Auto, Auto, Auto, *" ColumnDefinitions="Auto, *">
 		<Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Employee Id</Label>
 		<NumericUpDown Grid.Row="0" Grid.Column="1" Value="{Binding EmployeeId}" Minimum="1"/>
 
