--- a/PONRF/PonrfClient/PonrfStyles.axaml
+++ b/PONRF/PonrfClient/PonrfStyles.axaml
@@ -15,7 +15,19 @@
 	<Style Selector="Button">
 		<Setter Property="Width" Value="100"/>
 	</Style>
+
+	<Style Selector="Button.MainButton">
+		<Setter Property="Height" Value="250"/>
+		<Setter Property="Width" Value="250"/>
+		<Setter Property="Margin" Value="40,10,0,0"/>
+	</Style>
+
+	<Style Selector="Button.ButtonWindow">
+		<Setter Property="Margin" Value="4, 10, 4, 10"/>
+	</Style>
+	
 	<Style Selector="Grid.MainGrid">
 		<Setter Property="Margin" Value="8"/>
 	</Style>
+	
 </Styles>
